--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,66 @@
 /* Add CSS styling here */
+
+/* css reset:
+	http://meyerweb.com/eric/tools/css/reset/
+	v2.0 | 20110126
+	License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+header {
+  padding: 30px;
+  text-align: center;
+  line-height: 25pt
+}
+
+p { 
+
+  margin-top:10px;
+  margin-right:30px;
+  margin-left:30px;
+  margin-bottom: 40px;
+  text-align:center;
+ 
+}
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+
+.image {
+    display:flex;
+    flex-wrap:center;
+    text-align:center;
+ width: 80%;
+  height: 10%;
+   
+}
+.images-text {
+display: flex;
+  align-items: center; 
+  padding: 60px; 
+}
+
+.row {
+  padding: 20px;
+}
