--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,3 @@
-/* Add CSS styling here */
-
 /* css reset:
 	http://meyerweb.com/eric/tools/css/reset/
 	v2.0 | 20110126
@@ -21,46 +19,85 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  font-size: 65%;
   font: inherit;
   vertical-align: baseline;
 }
 
+
+* {
+  background-color: #ffe6e6;
+}
+
 header {
-  padding: 30px;
+  font-family: Impact, Charcoal, sans-serif;
+  padding: 25px;
   text-align: center;
-  line-height: 25pt
+  line-height: 2.5rem
+}
+
+h1 {
+  display:flex;
+  justify-content:center;
+  background-color: #ff80d5;
+}
+
+h2 {
+  display: flex;
+  background-color: pink;
+  justify-content:center;
 }
 
 p { 
-
-  margin-top:10px;
-  margin-right:30px;
-  margin-left:30px;
-  margin-bottom: 40px;
+  margin-top:1%;
+  margin-right:10%;
+  margin-left:10%;
+  margin-bottom: 1%;
   text-align:center;
- 
 }
+
 .container {
   display: flex;
   justify-content: center;
 }
 
-
 .image {
     display:flex;
     flex-wrap:center;
     text-align:center;
- width: 80%;
-  height: 10%;
-   
+    width: 80%;
+    height: 10%;
+   border-radius: 50% 
 }
+
 .images-text {
-display: flex;
+  display: flex;
   align-items: center; 
-  padding: 60px; 
+  flex-direction: row;  
+  padding: 1em 1.9em 4em 5em;
 }
 
 .row {
-  padding: 20px;
+  display: flex;
+  align-items: center;
+  padding: 2em 1em 1em 2em;
 }
+
+nav .links{
+  margin-top:0.1em;
+  margin-right:1.3em;
+  margin-left:1.3em;
+  margin-bottom: 1.3em;
+  text-align:center;
+}
+
+@media (max-width: 500px){
+  .header {
+  padding: 2em;
+  text-align: center;
+    line-height: 1rem}
+  
+@media (max-width: 800px){
+nav .links{
+  text-align: right;
+}}}
